// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`atLeast '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`atLeast 'a' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;

exports[`atLeast 'aa' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`atLeast 'aaa' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "a",
  "a",
]
`;

exports[`atLeast 'abaa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
  ],
  "pos": {
    "column": 2,
    "index": 1,
    "line": 1,
  },
}
`;
